--- a/storefront/layouts/PageLayout/PageLayout.module.css
+++ b/storefront/layouts/PageLayout/PageLayout.module.css
@@ -61,7 +61,6 @@
   background-color: #f4f4f4;
   border-radius: 8px;
   width: 100%;
-  margin-bottom: 40px;
   position: relative;
   overflow: hidden;
 }
@@ -82,6 +81,10 @@
 .date {
   margin-top: 12px;
   font-size: 16px;
+}
+
+.content {
+  padding: 24px 32px;
 }
 
 .content p {
